# swagger_output.json
@@ -2714,6 +2714,129 @@
         }
       }
     },
+    "/api/order/updateOrder/{id}": {
+      "patch": {
+        "tags": [
+          "User"
+        ],
+        "summary": "修改會員資料",
+        "description": "修改會員資料",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "type": "object",
+            "required": "true",
+            "description": "修改會員資料用",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nickName": {
+                  "type": "string",
+                  "example": "使用者暱稱"
+                },
+                "phoneNumber": {
+                  "type": "string",
+                  "example": "0912345678"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "Sat Apr 29 2023 16:20:13 GMT+0800 (台北標準時間)或2020-01-01"
+                },
+                "profilePic": {
+                  "type": "string",
+                  "example": "上傳圖片回傳的URL"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "修改會員資料",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "644cce67945042a407ed1c21"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "z2@gmail.com"
+                    },
+                    "nickName": {
+                      "type": "string",
+                      "example": "使用者暱稱"
+                    },
+                    "profilePic": {
+                      "type": "string",
+                      "example": "上傳圖片回傳的URL"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2023-04-29T07:59:35.033Z"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "example": "2023-04-29T08:14:38.516Z"
+                    },
+                    "__v": {
+                      "type": "number",
+                      "example": 0
+                    },
+                    "birthday": {
+                      "type": "string",
+                      "example": "2023-04-29T08:14:30.000Z"
+                    },
+                    "phoneNumber": {
+                      "type": "string",
+                      "example": "0912345678"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/api/order/deleteOrder/{id}": {
+      "delete": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/api/mail/orderMail": {
       "post": {
         "tags": [
